  - This new feature is enabled by default and can be disabled by navigating 
  	to File --> New Session Properties --> Tab SQL --> Show SQL execution errors in result tab.
  - Along with this feature comes a new Message Panel right mouse menu "Save size 0" that allows
    to hide the Message panel at application start up.

Bug-fixes:

2985845: Create table script generates incorrect foreign key stmt: Foreign key columns were used as primary key columns.

If the global setting "General => Save preferences immediately" is enabled, the SQLHistory will be saved immediately after the execution of a statement.  

The column numbers of the header columns are now correct, when exporting the result table as XML.

When displaying the content of a table, the dialog "Please wait while the query is executed" may not dispose.
  This may occurs only for tables of a "In Memory Database" with only a few rows of data. 

When editing table cells in a text area, the input field for the file name will be shown in an appropriate size 
  instead of being very small. If the user change the size of the dialog, the input field for the file name will use the extra space.

Now, "Press to open logs" shows  the current log file by default instead of a random one.

SQL Scripts Plugin: Increased multi table script configuration dialog's size.

Fixed NullPointerException in Hibernate Plugin when executing HQL with 'view objects' switched on.

Hibernate Plugin: Made HQL code completion work more exact.

Hibernate Plugin: Removed unused imports to regain compile independence from Hibernate API changes, see patch ID 3168381

3309565: Not possible to translate SQL connection error messages, because they are hard coded.

3303174: Installer hangs on linux.  Updated version of IzPack compiler to 4.3.4.

3293737: A exception occurs if the value of a SMALLINT column is edited in a result table.
