@@ -140,3 +140,5 @@ GeneralPreferencesPanel.tabbedStyle=Use tabbed layout (needs restart)
 GeneralPreferencesPanel.useScrollableTabbedPanesForSessionTabs=Use scrollable tabbed panes for Session tabs (needs restart) 
 GeneralPreferencesPanel.internalFrameStyle=Use MDI/Internal Frame layout (needs restart)
 GeneralPreferencesPanel.showTabbedStyleHint=Warn MDI/Internal Frame layout is deprecated
+
+GeneralPreferencesPanel.savePreferencesImmediatelyWarning=Warning: May significantly slow down execution of multiple statements
