@@ -108,6 +108,9 @@ Display errors in result tab (Feature request 2826179):
 
 Bug-fixes:
 
+Introduced performance warning for the global preference " Save Preferences Immediately" when
+multiple statements are executed and set the property's default value to false.
+
 2985845: Create table script generates incorrect foreign key stmt: Foreign key columns were used as primary key columns.
 
 If the global setting "General => Save preferences immediately" is enabled, the SQLHistory will be saved immediately after the execution of a statement.  
